# pal

./: .clang-format  .gitignore  CMakeLists.txt
cmake/: FindGEOS.cmake  dependencies.cmake  options.cmake  platform.cmake
paltool/: CMakeLists.txt  Geom.cpp  Geom.h  pal.cpp
src/includes/pal/: GeosWrapGeometry.h  LineString.h  Point.h  Polygon.h  label.h  layer.h  pal.h  palexception.h  palgeometry.h  palstat.h
src/pal/: CMakeLists.txt  GeosWrapGeometry.cpp  LineString.cpp  Point.cpp  Polygon.cpp  feature.cpp  feature.h  geomfunction.cpp  geomfunction.h  hashtable.hpp  internalexception.h  label.cpp  labelposition.cpp  labelposition.h  layer.cpp  linkedlist.hpp  pal.cpp  palstat.cpp  pointset.cpp  pointset.h  priorityqueue.cpp  priorityqueue.h  problem.cpp  problem.h  rtree.hpp  simplemutex.h  util.cpp  util.h
tests/: CMakeLists.txt  pal.cpp  pal_tests.cpp  test_geometries.cpp  test_geos_labelling.cpp  test_labelling.cpp
